--- a/src/views/GameView.css
+++ b/src/views/GameView.css
@@ -1,20 +1,20 @@
 .App {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 16px 0;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 16px 0;
 }
 
 .game-board {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .pegs-container, .selected-pegs-container {
-    display: flex;
+  display: flex;
 }
 
 .selected-pegs-container {
@@ -22,19 +22,23 @@
 }
 
 .peg {
-    font-weight: bold;
-    padding: 0 12px;
-    cursor: default;
+  font-weight: bold;
+  padding: 0 12px;
+  cursor: default;
 }
 
 .option {
-    background-color: blue;
+  background-color: blue;
 }
 
 .roll-container {
-    padding-top: 16px;
+  padding-top: 16px;
 }
 
 .die {
-    padding: 0 8px;
+  padding: 0 8px;
+}
+
+.die.game-over-die {
+  color: red;
 }
