--- a/src/views/GameView.css
+++ b/src/views/GameView.css
@@ -25,6 +25,11 @@
   font-weight: bold;
   padding: 0 12px;
   cursor: default;
+  border: 1px solid transparent;
+}
+
+.peg.score {
+  border-image: linear-gradient(to right, red, blue) 1;
 }
 
 .option {
